--- a/src/_miscs.scss
+++ b/src/_miscs.scss
@@ -368,8 +368,8 @@ div.CodeMirror-selected {
 
 // fixes katex padding
 .katex > .katex-html > .base {
-  overflow: hidden;
-  height: 1em;
-  margin-bottom: -0.1em;
+  // overflow: hidden;
+  // height: 1em;
+  // margin-bottom: -0.1em;
   padding: 0;
 }
